syntax = "proto3";
package cosmos.accountlink.v1;

import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "cosmossdk.io/x/accountlink/types";

// AccountsMetadata contains data value for indexes map
// corresponding to a pair of owner address and account type
message AccountsMetadata {
  // addresses is a list of smart account addresses
  repeated string addresses = 1;
}

// Condition or a set of rule that are check before any
// relationship can be formed
message Condition {
  // owner is the owner of the account
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // account is the address of the smart account
  string account = 2;

  // messages are a set of processes that will be executed as part
  // of the condition checking operation
  repeated google.protobuf.Any messages = 3;
}
